<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".HomeActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:id="@+id/toolbarMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:background="@drawable/bg_home2">

            <RelativeLayout
                android:id="@+id/rlAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/berita_indonesia"
                android:textColor="@android:color/white"
                android:textSize="16sp" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="-20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_date"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="25dp"
                        android:layout_toEndOf="@id/imgDate"
                        android:text="@string/selasa_5_januari_2021"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/Curved"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/toolbarMain"
            android:background="@drawable/bg_home"
            android:orientation="horizontal" />

        <include layout="@layout/item_main" />


        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:elevation="5dp"
            android:text="@string/app_berita_by_team_a"
            android:textColor="@color/colorAccent"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>